# CSA-Haskell-PokerGame

./: .env  .envrc  .envrc.orig  .gitignore  .gitignore.orig  CHANGELOG.md  CHANGELOG.md.save0  LICENSE  P2P-PokerGame.cabal  README.md  Specs.feature  flake.nix  stack.yaml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1cfq3bqjmyx1j64vawb83iy1x3jvw6sg-source  2bzb5jdv03zajxm7fly5c4lh7ngzh65g-source  5q7vxm9lc4b9hifc3br4sr8dy7f2h0qa-source  74lfbc16rmzimvz281rff8mv7mnbq42m-source  75yg5df22m25b8pk2qmw843ydnbl0rsk-source  8drxi4s8n69hdv4mp4jiqsi71yaxv8i6-source  99h6h71dj4myj8wdz8kr8czp6gckkfh6-source  alwr19m30k1w42kggdkv0wphav00lmx4-source  cw2f6b3bbgmamzj53z7ygr75y7fzp763-source  gmppc1139ppjii2yq94c2nb4gcc0sbhw-source  hb81frn1qnacz38jh7py28i6dq5bamr4-source  ippbcf30i946x1mcy1n76pqr57m84f3v-source  jk590byq8ydkv9h7i4k0mvrg1ac9570v-source  kgdb7mqyrfs7wdbm4zbxm960vma5zm0k-source  kkx597wj2hm814bh1wr0i6vzlw060xck-source  nyiwz0136np2pafqxnzk53qhml0ann20-source  pinv9zz75ahxf6dp04jkm61bi4j7a2pz-source  q93l7x1nc8i5jcckbxhqzpv1v8v86qdr-source
app/: DemoCardsCrypt.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: P2P-PokerGame-0.1.0.0-inplace.conf  package.cache
puml/: PokerClassDiagram.puml  PokerSequenceDiagram.puml  PokerUseCaseDiagram.puml  SD-DropoutPrep.puml  SD1.puml  StateDiagram.puml
src/: Cards.hs  CardsCrypt.hs  Poker.hs  PokerGame.hs  PokerGameApp.hs  PokerLogic.hs  Utilities.hs
test/: Main.hs  PokerLogicTests.hs  UtilityFunctionsTests.hs
